--- a/contact.html
+++ b/contact.html
@@ -10,6 +10,15 @@
         <link rel="stylesheet" href="./css/style.css">
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet">
         <script src="./js/scripts.js"></script>
+        <script>
+            function validateForm(){
+                let x = document.forms["form_feedback"]["hoten"].value;
+                if (x == "") {
+                 alert("Name must be filled out");
+                 return false;
+                 }
+            }
+        </script>
     </head>
 <body>
     <header id="header">
@@ -54,53 +63,30 @@
                     <p class="noidung_lienhe">Email: news@cga.vn</p>
                 </div>
                 <div class="form_feedback" >
-                    <h2>Phản hồi</h2>
-                    <form action="" method="post">
+                    <form name="form_feedback" action="" method="post">
                         <div class="form_table">
+                            <h2>Phản hồi</h2>
                             <div class="mb-3">
                                 <label for="formGroupExampleInput" class="form-label">Họ và tên</label>
-                                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Nhập họ tên">
+                                <input type="text" name="hoten" class="form-control" id="formGroupExampleInput" placeholder="Nhập họ tên" required>
                               </div>
                               <div class="mb-3">
                                 <label for="formGroupExampleInput2" class="form-label">Email</label>
-                                <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Nhập email">
+                                <input type="email" class="form-control" id="formGroupExampleInput2" placeholder="Nhập email" required>
                               </div>
                                 <div class="mb-3">
                                     <label for="formGroupExampleInput2" class="form-label">Số điện thoại</label>
-                                    <input type="tel" class="form-control" id="formGroupExampleInput2" placeholder="Nhập số điện thoại">
+                                    <input type="tel" class="form-control" id="formGroupExampleInput2" placeholder="Nhập số điện thoại" onkeypress="return isNumber(event)" required>
                                 </div>
                                 <div class="mb-3">
                                     <label for="formGroupExampleInput2" class="form-label">Nội dung phản hồi</label>
-                                    <textarea class="form-control" id="formGroupExampleInput2" placeholder="Nhập nội dung phản hồi"></textarea>
+                                    <textarea class="form-control" id="formGroupExampleInput2" placeholder="Nhập nội dung phản hồi" required></textarea>
                                 </div>
                                 <div class="d-flex flex-row-reverse ">
-                                    <button class="p-2 button_sub">Gửi</input>
+                                    <button class="button_sub" type="submit">Gửi</button>
                                   </div>
                                 
                         </div>
-                        
-                        <!-- <table class="form_table">
-                            <tr>
-                                <td><label for="name">Họ và tên:</label></td>
-                                <td><input class="form-control" type="text" id="name" name="name" required placeholder="Nhập họ và tên"></td>
-                            </tr>
-                            <tr>
-                                <td><label for="email">Email:</label></td>
-                                <td><input type="email" id="email" name="email" required placeholder="Nhập email"></td>
-                            </tr>
-                            <tr>
-                                <td><label for="phone">Số điện thoại:</label></td>
-                                <td><input type="tel" id="phone" name="phone" required placeholder="Nhập số điện thoại"></td>
-                            </tr>
-                            <tr>
-                                <td><label for="feedback">Nội dung phản hồi:</label></td>
-                                <td><textarea id="feedback" name="feedback" required placeholder="Nhập nội dung phản hồi"></textarea></td>
-                            </tr>
-                            <tr>
-                                <td></td>
-                                <td><button class="button_sub" type="submit">Gửi</button></td>
-                            </tr>
-                        </table> -->
                     </form>
                 </div>
             </div>
